--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bochilteam/scraper": "^4.0.22-alpha.0",
     "@types/node": "^18.0.6",
     "child_process": "^1.0.2",
     "dotenv": "^16.0.3",
     "human-readable": "^0.2.1",
+    "moment-timezone": "^0.5.40",
     "node-fetch": "^3.2.6",
     "openai": "^3.1.0",
     "os": "^0.1.2",
