--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@bochilteam/scraper": "^4.0.22-alpha.0",
     "@types/node": "^18.0.6",
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
-    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "human-readable": "^0.2.1",
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.40",
-    "node-fetch": "^3.2.6",
+    "node-fetch": "^2.6.1",
     "openai": "^3.1.0",
     "os": "^0.1.2",
     "perf_hooks": "^0.0.1",
     "telebot": "^1.4.1",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "ytdl-core": "^4.11.2"
   }
 }
