--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "os": "^0.1.2",
     "perf_hooks": "^0.0.1",
     "telebot": "^1.4.1",
-    "util": "^0.12.5",
-    "ytdl-core": "^4.11.2"
+    "util": "^0.12.5"
   }
 }
