--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@bochilteam/scraper": "^4.0.22-alpha.0",
     "@types/node": "^18.0.6",
+    "adhan": "^4.4.3",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
