--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
     "express": "^4.18.2",
-    "fg-ig": "^0.0.4",
     "http": "^0.0.1-security",
     "human-readable": "^0.2.1",
+    "instagram-url-dl": "^5.1.3",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.40",
     "node-fetch": "^2.6.1",
     "openai": "^3.1.0",
     "os": "^0.1.2",
     "perf_hooks": "^0.0.1",
-    "snapsave-downloader": "^6.9.5",
     "telebot": "^1.4.1",
-    "util": "^0.12.5"
+    "tikchan": "^1.0.1",
+    "util": "^0.12.5",
+    "vihangayt-fbdl": "^1.0.2"
   }
 }
